--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 
 :root {
-	--fundo: #1E1E1E;		
-	--verde: #6FFF57;
+	--fundo: #ff0000;		
+	--verde: #26ff00;
 	--branco: #FFFFFF;
 	--botao-on: #3A375E;
 	--botao-off: rgba(58, 55, 94, 0.5);
