--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 :root {
 	--fundo: #ff0000;		
-	--verde: #26ff00;
+	--verde: #000000;
 	--branco: #FFFFFF;
 	--botao-on: #3A375E;
 	--botao-off: rgba(58, 55, 94, 0.5);
